Changelog Acumulus web shop extensions
======================================

This file contains a historical overview of changes in our own code.


8.3.6 (2024-1?-??)
------------------
Bugs:
- WC: Division by zero in WooCommerce/Collectors/ItemLineCollector.php:72
- ALL: TypeError: Siel\Acumulus\Helpers\FormRenderer::addAttribute(): Argument #3 ($value)
  must be of type array|string|bool|null, int given, called in Helpers/FormRenderer.php on
  line 427 and defined in Helpers/FormRenderer.php:712.
- Form rendering: we encountered some:
  - Violations against the HTML specifications
  - Missing id attributes on `<fieldset>`s, `<summary>`s, and on the wrapper around radio
    buttons and checkboxes. By adding this attribute, they can be individually addressed
    by CSS.
  - Typos.

Testing:
- Added integration tests for our forms (creation, field definitions and rendering). This
  should help preventing bugs like the TypeError in the FormRenderer (see above).

Refactorings:
- Basic submit structure now created and collected as an AcumulusObject.

8.3.5 (2024-11-01) (WC) (actually: all shops that use our own form renderer)
-----------------------
Bugs:
- WC: TypeError: Siel\Acumulus\Helpers\FormRenderer::addAttribute(): Argument #3 ($value)
  must be of type array|string|bool|null, int given, called in Helpers/FormRenderer.php
  on line 427 and defined in Helpers/FormRenderer.php:712.


8.3.4 (2024-11-01) (ALL)
------------------------
Bugs:
- ALL: Uncaught RuntimeException: "curl_exec(): 28 - Connection timed out ..." lead to
  a WSOD on all admin pages (and client-side pages where Acumulus API calls are made). The
  solution is to fail silently, letting the (admin) page render but without Acumulus
  plugin features.
- ALL: minor: the mail that was sent in those situations did not contain a header.


8.3.3 (2024-10-19) (WC)
-----------------------
Bugs:
- ALL: TypeError: Siel\Acumulus\Helpers\Container::getCompletorInvoiceLines(): Return